Fix image spacing.

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -80,4 +80,5 @@ img {
 	border-radius: 12px;
 	float: right;
 	margin-right: 25%;
+	margin-top: 1%;
 }
